--- a/package.json
+++ b/package.json
@@ -10,8 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-firebase/app": "^10.3.0",
+    "@react-native-firebase/auth": "^10.3.1",
+    "@react-native-firebase/firestore": "^10.3.1",
+    "@react-native-firebase/storage": "^10.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/material-top-tabs": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.16",
+    "date-fns": "^2.30.0",
+    "firebase": "^9.21.0",
+    "i": "^0.3.7",
+    "moment": "^2.29.4",
+    "nativewind": "^2.0.11",
+    "npm": "^9.6.7",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-deck-swiper": "^2.0.14",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-navigation": "^4.4.4",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
