--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^10.3.0",
     "@react-native-firebase/auth": "^10.3.1",
     "@react-native-firebase/firestore": "^10.3.1",
     "@react-native-firebase/storage": "^10.3.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.2",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/stack": "^6.3.16",
+    "@react-navigation/stack": "^6.3.21",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "firebase": "^9.21.0",
     "i": "^0.3.7",
     "moment": "^2.29.4",
@@ -31,7 +33,9 @@
     "react-native": "0.73.4",
     "react-native-deck-swiper": "^2.0.14",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-maps": "^1.10.2",
     "react-native-pager-view": "^6.2.3",
+    "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
@@ -39,21 +43,24 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
