--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.21",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "firebase": "^9.21.0",
@@ -32,14 +34,17 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-deck-swiper": "^2.0.14",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.15.0",
-    "react-native-maps": "^1.10.2",
+    "react-native-maps": "^1.10.3",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^4.4.4",
+    "rn-fetch-blob": "^0.12.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
