--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
       android:theme="@style/AppTheme">
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyDQyKfla4S_Jw8sPzY9Dfjagw_nLz5W8Ls" />
+        android:value="" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
